# cosette

./: 00_core.ipynb  01_completions.ipynb  01_toolloop.ipynb  02_completions.ipynb  CHANGELOG-commonmark.md  CHANGELOG.html  CHANGELOG.md  README.md  apilist.txt  core.html  core.html.md  index.html  index.html.md  index.ipynb  llms-ctx-full.txt  llms-ctx.txt  llms.txt  nbdev.yml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  toolloop.html  toolloop.html.md
cosette/: __init__.py  _modidx.py  completions.py  core.py  toolloop.py
tools/: update.sh
