[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name="cosette"
dynamic = ["version"]
description = "A helper for using the OpenAI API"
readme = "README.md"
requires-python=">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Jeremy Howard", email = "j@fast.ai"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["fastcore>=1.8.4","openai>=1.99.3","msglm>=0.0.8","toolslm>=0.3.0"]

[project.urls]
Repository = "https://github.com/AnswerDotAI/cosette"
Documentation = "https://AnswerDotAI.github.io/cosette"

[project.entry-points.nbdev]
cosette = "cosette._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cosette.__version__"}

[tool.setuptools.packages.find]
include = ["cosette"]

[project.optional-dependencies]
dev = ["ipython"]

[tool.nbdev]
nbs_path = '.'
recursive = false
jupyter_hooks = true
custom_sidebar = false
